# Random-Earnings-Bot

./: README.md  adamw_model.keras  batch_logs.csv  bot.py  bot.session  bot_session.session  pyproject.toml  random_earnings_model.h5  random_earnings_model.keras  training_adamw.csv  training_log.csv
backend/: Dockerfile  README.md  assist_b.py  bot_session.session  bot_session.session-journal  requirements.txt  run_bot.md  to_read.md
backend/xyz/x/monitor/: x_conn_check.py
logs/adamw/train/: events.out.tfevents.1729709448.szogun-pc.2052691.0.v2
logs/adamw/validation/: events.out.tfevents.1729709451.szogun-pc.2052691.1.v2
logs/train/: events.out.tfevents.1729645799.szogun-pc.1664709.0.v2  events.out.tfevents.1729646613.szogun-pc.1674296.0.v2
logs/validation/: events.out.tfevents.1729645801.szogun-pc.1664709.1.v2  events.out.tfevents.1729646614.szogun-pc.1674296.1.v2
random_earnings_bot/: bot.py  lstm_model_integration.py
